--- a/frontend/src/app/main/pages/consultar-compra/consultar-compra.component.html
+++ b/frontend/src/app/main/pages/consultar-compra/consultar-compra.component.html
@@ -69,7 +69,7 @@
                                 [routerLink]="['/main/compra',compra.id]" routerLinkActive="router-link-active" 
                             ><i class="fas fa-eye text-gray-700 fa-lg"></i></button>
                             
-                            <button class=""><i class="fas fa-trash text-gray-700 fa-lg"></i></button>
+                            <!-- <button class=""><i class="fas fa-trash text-gray-700 fa-lg"></i></button> -->
                         </td>
                     </tr>
                 </tbody>
