--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,11 +9,11 @@
     <ul
       class="flex-col md:flex-row list-none items-center hidden md:flex"
     >
-    <li class="h-12 cursor-pointer flex items-center mr-2 rounded-full">
+    <!-- <li class="h-12 cursor-pointer flex items-center mr-2 rounded-full">
       <img src="/assets/img/agregar-usuario.png" alt="agregar-cliente" class="h-10" title="Agregar cliente">
-    </li>
-    <li class="h-12 cursor-pointer flex items-center mr-2 rounded-full">
-      <img src="/assets/img/carro.png" alt="agregar-venta" class=" h-10" title="Agregar compra">
+    </li> -->
+    <li class="h-12 cursor-pointer flex items-center mr-2 rounded-full" [routerLink]="['/main/registrar-venta']">
+      <img src="/assets/img/carro.png" alt="agregar-venta" class=" h-10" title="Agregar venta">
     </li>
       <app-user-dropdown></app-user-dropdown>
     </ul>
