--- a/frontend/src/app/main/pages/bitacora/bitacora.component.html
+++ b/frontend/src/app/main/pages/bitacora/bitacora.component.html
@@ -9,14 +9,12 @@
         </div>
         <div class="w-full flex justify-end align-middle mb-6 text-sm">
             <form [formGroup]="formBusqueda" (ngSubmit)="busqueda()" class="w-full md:w-3/4 lg:w-3/5 grid grid-cols-12 gap-1" >
-                <select name="parametro" id="parametro" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-3" formControlName="parametro">
-                    <option value="usuario">Usuario</option>
-                  </select>
-                <select type="text" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-7" name="valorParametro" 
+                <select type="text" class="appearance-none bg-gray-200 border border-gray-200 text-gray-700 box-border p-2 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 col-span-9" name="valorParametro" 
                 formControlName="valorParametro" placeholder="Seleccione">
+                    <option value="">-- Seleccione un usuario --</option>
                     <option *ngFor="let u of usuarios" value="{{u.id}}">{{u.nombre}}</option>
                 </select>
-                <button type="submit" class="px-3 py-1 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear col-span-2">Buscar</button>
+                <button type="submit" class="px-3 py-1 bg-red-500 rounded text-white cursor-pointer hover:shadow-lg transition duration-700 ease-linear col-span-3">Buscar</button>
             </form>
         </div>
         <div class="w-full mb-6">
@@ -40,24 +38,24 @@
                 <tbody *ngIf="listado">
                     <tr *ngFor="let user of listado">
                         <th class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            {{user.fecha | amLocale: 'es' | amTimeAgo}}
+                            {{user.fecha | amLocale:'es' | amDateFormat:'MMMM Do YYYY, h:mm:ss a'}}
                         </th>
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            {{user.usuario.nombre}}
+                            {{user.usuario}}
                         </td>
                 
                         <td class="border-t-0 align-middle border-l-0 border-r-0 p-2" >
-                            {{user.operacion.operacion}}
+                            {{user.mensaje}}
                         </td>
                     </tr>
                                     </tbody>
             </table>
         </div>
-        <div class="w-full flex justify-center mt-4 text-sm" >
+        <div class="w-full flex justify-center mt-4 text-sm" *ngIf="totalPages > 1">
             <button
-                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear mr-4" *ngIf="page !== 1" (click)="paginaAnterior()" >Anterior</button>
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear mr-4" *ngIf="page !== 1" (click)="paginaAnterior()">Anterior</button>
             <button
-                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear" *ngIf="page !== totalPages" (click)="paginaSiguiente()"  >Siguiente</button>
+                class="px-4 py-2 bg-blue-900 rounded text-white cursor-pointer hover:shadow-lg transition duration-500 ease-linear" *ngIf="page !== totalPages" (click)="paginaSiguiente()">Siguiente</button>
         </div>
     </div>
 </div>
