--- a/frontend/src/app/main/pages/consultar-venta/consultar-venta.component.html
+++ b/frontend/src/app/main/pages/consultar-venta/consultar-venta.component.html
@@ -70,7 +70,7 @@
                             >
                             <i class="fas fa-eye text-gray-700 fa-lg"></i></button>
                             
-                            <button><i class="fas fa-trash text-gray-700 fa-lg"></i></button>
+                            <!-- <button><i class="fas fa-trash text-gray-700 fa-lg"></i></button> -->
                         </td>
                     </tr>
                 </tbody>
