--- a/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
+++ b/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="w-full text-sm mb-6 grid grid-cols-7 gap-2">
             <div class="col-span-4 md:col-span-5">
-                <label class="block mb-1 font-bold">Cliente</label>
+                <label class="block mb-1 font-bold">Proveedor</label>
                 <input class="w-full p-2 bg-gray-200 rounded focus:bg-white" type="text" disabled
                 placeholder="haga click en agregar proveedor"
                     value="{{ (proveedor) ? proveedor.rif+' '+proveedor.nombre : '' }}"
