--- a/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
+++ b/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="w-full text-sm mb-6 grid grid-cols-7 gap-2">
             <div class="col-span-4 md:col-span-5">
-                <label class="block mb-1 font-bold">Cliente</label>
+                <label class="block mb-1 font-bold">Proveedor</label>
                 <input class="w-full p-2 bg-gray-200 rounded focus:bg-white" type="text" disabled
                 placeholder="haga click en agregar proveedor"
                     value="{{ (proveedor) ? proveedor.rif+' '+proveedor.nombre : '' }}"
@@ -99,7 +99,7 @@
                            {{ item.precio*precioDolar | currency:'Bs.S '}}
                         </td>
                         <td class="flex items-center justify-center border-t-0 align-middle border-l-0 border-r-0 p-2">
-                            <button class="h-8 w-8 rounded-full bg-red-600" (click)="eliminarProducto(i)">E</button>
+                            <button class="" (click)="eliminarProducto(i)"> <i class="fas fa-trash text-gray-700 fa-lg"></i> </button>
                         </td>
                     </tr>
                     <tr *ngIf="productosCompra.length === 0" >
