--- a/frontend/src/app/main/pages/usuarios/agregarUsuario/agregarUsuario.component.html
+++ b/frontend/src/app/main/pages/usuarios/agregarUsuario/agregarUsuario.component.html
@@ -44,7 +44,7 @@ class="overflow-x-hidden overflow-y-auto fixed inset-0 z-50 outline-none focus:o
           <div class="w-full grid grid-cols-2 lg:grid-cols-6 gap-2">
               <div class="col-span-2 md:col-span-1 lg:col-span-2">
                   <label for="username" class="text-gray-800 mb-2 font-bold">Nombre de Usuario</label>
-                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="username" id="username" placeholder="ej. 13567439"
+                  <input type="text" class="w-full block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 box-border p-3 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500 mb-4" name="username" id="username" placeholder="ej. usuario1"
                     formControlName="username" 
                   >
           
