--- a/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
+++ b/frontend/src/app/main/pages/agregar-compra/agregar-compra.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="w-full  flex justify-between py-2 px-2 mb-6">
             <h3 class="text-2xl">Detalles de compra</h3>
-            <span class="text-xl text-right"> <strong>Fecha:</strong> {{fecha | date:'dd/MM/yyyy'}}<br/> <strong>Venta </strong> #0001</span>
+            <span class="text-xl text-right"> <strong>Fecha:</strong> {{fecha | date:'dd/MM/yyyy'}}</span>
         </div>
         <div class="w-full text-sm mb-6 grid grid-cols-7 gap-2">
             <div class="col-span-4 md:col-span-5">
